fix(agent): correct indexing boundaries and tag counts